# Microsoft-Teams-Samples

./: .copilot-agent-samples.md  .gitignore  Bot framework Sdk  BotSSOSetup.md  README.md  docker-compose.yml  nuget.config  package-lock.json  package.json  test.md  updated-content.txt  webpack.config.js
.devcontainer/app-hello-world-csharp/: devcontainer.json
.devcontainer/bot-conversation-python/: devcontainer.json
.devcontainer/bot-formatting-cards-container-nodejs/: devcontainer.json
.devcontainer/msgext-link-unfurling-python/: devcontainer.json
.devcontainer/msteams-FAQPlus/: devcontainer.json
.devcontainer/msteams-chat-with-your-data/: devcontainer.json
.devcontainer/tab-adaptive-cards-nodejs/: devcontainer.json
.devcontainer/tab-personal-sso-quickstart-nodejs/: devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/policies/: resourceManagement.yml
.github/workflows/: account-linking-csharp.yml  app-anonymous-users-csharp.yml  app-checkin-location-csharp.yml  app-complete-auth-csharp.yml  app-complete-auth.yml  app-complete-sample-csharp.yml  app-complete-sample-nodejs.yml  app-complete-sample.yml  app-hello-world-csharp.yml  app-installation-using-qr-code.yml  app-link-unfurling-in-share-to-stage.yml  app-link-unfurling-in-share-to-teams.yml  app-localization-csharp.yml  app-location-checkin-csharp.yml  app-region-selection-csharp.yml  app-sso-csharp.yml  app-sso.yml  app-task-module-csharp.yml  app-task-module.yml  app-virtual-assistant-csharp.yml  bab-request-approval.yml  blank.yml  bot-adaptive-card-actions-csharp.yml  bot-adaptivecards-user-specific-views-csharp.yml  bot-all-cards-csharp.yml  bot-archive-groupchat-messages-csharp.yml  bot-archive-groupchat-messages.yml  bot-configuration-app-nodejs.yml  bot-conversation-csharp.yml  bot-daily-task-reminder-csharp.yml  bot-daily-task-reminder.yml  bot-file-upload-csharp.yml  bot-formatting-cards-csharp.yml  bot-initiate-thread-in-channel-csharp.yml  bot-join-a-team-by-qr-csharp.yml  bot-join-a-team-by-qr.yml  bot-message-reaction-csharp.yml  bot-receive-channel-messages-withRSC-csharp.yml  bot-receive-channel-messages-withRSC.yml  bot-request-approval.yml  (+73 more)
ZaschryTylerWood/: Vscode
csharp/: README.md
csharp/AppManifest/: manifest.json
csharp/Bots/: TeamsConversationBot.cs
csharp/app-complete-sample/: template-bot-master-csharp.sln
csharp/app-in-meeting/: .gitignore  Program.cs  TokenApp.sln
csharp/assets/: sample.json
csharp/bot-proactive-messaging/: README.md
csharp/complete-sample/: README.md
csharp/hello-world/: README.md  (+1 more)
csharp/tabs/: LICENSE  (+1 more)
samples/: samples.slnx
samples/TeamsSDK/agent-targeted-messages/python/agent-targeted-messages/: README.md  main.py  pyproject.toml
samples/TeamsSDK/agent-targeted-messages/python/agent-targeted-messages/assets/: sample.json
samples/TeamsSDK/bot-ai-messages/python/bot-ai-messages/: README.md  main.py  pyproject.toml
samples/TeamsSDK/bot-ai-messages/python/bot-ai-messages/assets/: sample.json
samples/TeamsSDK/bot-auth-quickstart/python/bot-auth-quickstart/: .env.TEMPLATE  README.md  m365agents.local.yml  m365agents.yml  main.py  pyproject.toml
samples/TeamsSDK/bot-auth-quickstart/python/bot-auth-quickstart/appPackage/: manifest.json
samples/TeamsSDK/bot-auth-quickstart/python/bot-auth-quickstart/assets/: sample.json
samples/TeamsSDK/bot-auth-quickstart/python/bot-auth-quickstart/env/: .env.dev
samples/TeamsSDK/bot-auth-quickstart/python/bot-auth-quickstart/infra/: azure.parameters.local.json
samples/TeamsSDK/bot-task-modules/python/bot-task-modules/: .env.TEMPLATE  README.md  main.py  pyproject.toml
samples/TeamsSDK/bot-task-modules/python/bot-task-modules/assets/: sample.json
samples/bot-ai-messages/python/bot-ai-messages/: .env.TEMPLATE  README.md  pyproject.toml
samples/bot-ai-messages/python/bot-ai-messages/assets/: sample.json
samples/bot-auth-quickstart/python/bot-auth-quickstart/: .gitignore  .webappignore  ProactiveInstallationService.py  README.md  aad.manifest.json  group_chat_service.py  m365agents.local.yml  m365agents.playground.yml  m365agents.yml  main.py  pyproject.toml  storage.py
samples/bot-auth-quickstart/python/bot-auth-quickstart/assets/: sample.json
samples/bot-auth-quickstart/python/bot-auth-quickstart/env/: .env.local  .env.playground
samples/bot-auth-quickstart/python/bot-auth-quickstart/infra/: azure.bicep  azure.parameters.json
samples/bot-auth-quickstart/python/bot-auth-quickstart/infra/botRegistration/: azurebotlocal.bicep
samples/bot-meetings/python/bot-meetings/: .env.TEMPLATE  README.md  main.py  pyproject.toml
samples/bot-meetings/python/bot-meetings/assets/: sample.json
samples/bot-message-extensions/python/bot-message-extensions/: .env.TEMPLATE  README.md  experts.json  main.py  pyproject.toml
samples/bot-message-extensions/python/bot-message-extensions/assets/: sample.json
samples/bot-message-reaction/python/bot-message-reaction/: README.md  main.py  pyproject.toml
samples/msteams-FAQPlus/: .gitignore  .webappignore  README.md  deploy.sh  pyproject.toml  teamsapp.local.yml  teamsapp.yml
samples/msteams-FAQPlus/appPackage/: manifest.json
samples/msteams-FAQPlus/env/: .env.local
samples/msteams-FAQPlus/infra/: azure.ai.resources.json  azure.bicep  azure.parameters.json
samples/msteams-FAQPlus/scripts/: __init__.py  lint.py  start.py
samples/msteams-FAQPlus/src/: api.py  app.py  bot.py  config.py  state.py
samples/msteams-FAQPlus/src/cards/: close_request_card.py  talk_to_expert_card.py
samples/msteams-FAQPlus/src/data/python-3.12.4-docs-text/faq/: design.txt  extending.txt  general.txt  gui.txt  index.txt  installed.txt  library.txt  programming.txt  windows.txt
samples/msteams-FAQPlus/src/indexer/: data.py  delete.py  setup.py  utils.py
samples/msteams-FAQPlus/src/prompts/chat/: config.json  skprompt.txt
(+15330 files in other folders)
