[project]
name = "bot-meetings"
version = "0.1.0"
description = "This sample demonstrates a bot that handles meeting events and transcripts in Microsoft Teams using Python."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "python-dotenv>=1.0.*",
    "microsoft-teams-apps==2.0.0a9",
]