[project]
name = "bot-message-extensions"
version = "0.1.0"
description = "This sample demonstrates a search-based messaging extension in Microsoft Teams that allows users to search NuGet packages, Wikipedia articles, and find experts."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "python-dotenv>=1.0.*",
    "microsoft-teams-apps==2.0.0a9"
]
