[project]
name = "bot-auth-quickstart"
version = "1.0.0"
description = "Bot Auth Quickstart - Teams SDK"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "python-dotenv>=1.0.0",
    "microsoft-teams-apps==2.0.0",
    "microsoft-teams-graph==2.0.0",
    "microsoft-teams-common==2.0.0",
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.12.0"
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["infra*", "assets*", "appPackage*"]